Bug 282241 - Page down broken after viewing a video
Summary: Page down broken after viewing a video
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Preview-Video (other bugs)
Version First Reported In: 2.2.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-17 21:11 UTC by Frederic Grelot
Modified: 2017-07-27 10:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederic Grelot 2011-09-17 21:11:55 UTC
Version:           2.2.0 (using KDE 4.7.1) 
OS:                Linux

When I preview all my pictures (usually when I want to quickly see all my shoots and remove all those I don't like...), I usually use the preview mode, along with the thumbar, and use page down to switch from one picture to the next one.
However, when there is a movie in the album, the behaviour is not really as expected

Reproducible: Always

Steps to Reproduce:
Take an album with 3 pictures and one movie : A, B, C, D, where B is the movie
open the "preview mode", enable the thumbar, click on A, press pgdown.
The movie gets selected, and played.

Actual Results:  
-the movie takes the full panel (the thumbbar has disappeared) : it is probably normal, but not really what I would expect : why does the movie make the thumbbar disappear, and not the pictures? And what if my album has only movies in it?
-furthermore, "page down" does not work anymore. The only solution to switch to "C", the picture after the movie, is to use the "next picture" blue arrow  (argg, I must take my mouse back in my hand, what a suffering!! :-) )
-If i do that, the thumbbar reappears, but is still not focused : Page down still does not work

Expected Results:  
-Don't hide the thumbbar to play movie
This should also prevent the thumbbar from losing the focus, which is very likely the reason why "page down" does not work anymore
-add a preference "play movies in full panel in preview mode" : that may be a good idea, but won't solve the keyboard focus problem.

OS: Linux (x86_64) release 3.0.1-3.fc16.x86_64
Compiler: gcc
Input devices : one keyboard, and one mouse but very far from my arm...
Comment 1 Marcel Wiesweg 2011-09-18 10:23:25 UTC
Git commit df87048a900aca22513a91370341ac5e1c14dd46 by Marcel Wiesweg.
Committed on 18/09/2011 at 12:12.
Pushed by mwiesweg into branch 'master'.

Fix navigation and thumbbar with media player view

Show thumbbar as well with media player view.
Fix switch from media player to image preview view, need to reset the image
preview view before switching to media player view, so that the relevant signals
are emitted when goint back to the same image as before the switch

BUG: 282241

M  +2    -1    NEWS
M  +10   -1    digikam/views/imagepreviewview.cpp
M  +10   -16   digikam/views/stackedview.cpp

http://commits.kde.org/digikam/df87048a900aca22513a91370341ac5e1c14dd46