Fix navigation and thumbbar with media player view

Show thumbbar as well with media player view.
Fix switch from media player to image preview view, need to reset the image
preview view before switching to media player view, so that the relevant signals
are emitted when goint back to the same image as before the switch

BUG: 282241